--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,23 +24,23 @@
 				Username is required
 			</p>
 
-			<ion-item>
-				<ion-label stacked color="primary">Password</ion-label>
-				<ion-input [(ngModel)]="login.password" name="password" type="password" #password="ngModel" required>
-				</ion-input>
-			</ion-item>
-			<p ion-text [hidden]="password.valid || submitted == false" color="danger" padding-left>
-				Password is required
-			</p>
+			<!--<ion-item>-->
+				<!--<ion-label stacked color="primary">Password</ion-label>-->
+				<!--<ion-input [(ngModel)]="login.password" name="password" type="password" #password="ngModel" required>-->
+				<!--</ion-input>-->
+			<!--</ion-item>-->
+			<!--<p ion-text [hidden]="password.valid || submitted == false" color="danger" padding-left>-->
+				<!--Password is required-->
+			<!--</p>-->
 		</ion-list>
 
 		<ion-row responsive-sm>
 			<ion-col>
 				<button ion-button (click)="onLogin(loginForm)" type="submit" block>Login</button>
 			</ion-col>
-			<ion-col>
-				<button ion-button (click)="onSignup()" color="light" block>Signup</button>
-			</ion-col>
+			<!--<ion-col>-->
+				<!--<button ion-button (click)="onSignup()" color="light" block>Signup</button>-->
+			<!--</ion-col>-->
 		</ion-row>
 	</form>
 
