--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -18,6 +18,8 @@
             <ion-card-header>
               <button ion-item detail-none (click)="goToPollDetail(poll)">
                 {{poll.title}}
+                <br>
+                {{poll.userVoted}}
               </button>
             </ion-card-header>
 
