--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -18,8 +18,6 @@
             <ion-card-header>
               <button ion-item detail-none (click)="goToPollDetail(poll)">
                 {{poll.title}}
-                <br>
-                {{poll.userVoted}}
               </button>
             </ion-card-header>
 
@@ -35,7 +33,13 @@
                 </ion-row>
               </ion-grid>
 
-              <button ion-button color="secondary" full round (click)="vote(poll)" [disabled]="!(poll.userVote >= 0)">Vote</button>
+              <button ion-button color="secondary" full round
+                      (click)="vote(poll)"
+                      [disabled]="!(poll.userVote >= 0)"
+                      [hidden]="poll.userVoted"
+              >
+                Vote
+              </button>
             </ion-card-content>
 
             <ion-row>
