--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -33,6 +33,22 @@
                 </ion-row>
               </ion-grid>
 
+              <!--<ion-item [hidden]="poll.userVoted || (!poll.userVoted && !(poll.userVote >= 0))">-->
+                <!--<ion-label stacked color="primary">Comment</ion-label>-->
+                <!--<ion-input [(ngModel)]="poll.comment" name="comment" type="text" #comment="ngModel" spellcheck="false" autocapitalize="off">-->
+                <!--</ion-input>-->
+              <!--</ion-item>-->
+
+              <ion-list [hidden]="poll.userVoted || (!poll.userVoted && !(poll.userVote >= 0))">
+
+                <ion-item>
+                  <ion-label floating color="primary">Comment</ion-label>
+                  <ion-input [(ngModel)]="poll.comment" type="text"></ion-input>
+                </ion-item>
+
+              </ion-list>
+
+
               <button ion-button color="secondary" full round
                       (click)="vote(poll)"
                       [disabled]="!(poll.userVote >= 0)"
