--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -36,6 +36,10 @@
               <button ion-button color="secondary" full round (click)="vote(poll)" [disabled]="!(poll.userVote >= 0)">Vote</button>
             </ion-card-content>
 
+            <ion-row *ngFor="let result of getVoteResults(poll)">
+              {{result.key}} {{result.value}}
+            </ion-row>
+
             <ion-row>
               <ion-col>
                 <button ion-button icon-left clear small>
@@ -46,7 +50,7 @@
               <ion-col *ngIf="poll.users">
                 <button ion-button icon-left clear small>
                   <ion-icon name="text"></ion-icon>
-                  <div>{{_getCommentsCount(poll)}} Messages</div>
+                  <div>{{getCommentsCount(poll)}} Messages</div>
                 </button>
               </ion-col>
             </ion-row>
