--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -10,35 +10,57 @@
   <ion-slides #slides (ionSlideWillChange)="onSlideChangeStart($event)" pager>
 
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-1.png" class="slide-image"/>
-      <h2 class="slide-title">
-        Welcome to <b>ICA</b>
-      </h2>
-      <p>
-        The <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code use.
-      </p>
+      <h3 class="slide-title">
+        This is Steve. He is your manager.
+      </h3>
+      <img src="assets/img/tutorial/1.png" class="slide-image"/>
+      <h2>Kid you not,<br>he <b>cares</b> about how you feel.</h2>
     </ion-slide>
 
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-2.png" class="slide-image"/>
-      <h2 class="slide-title" >What is Ionic?</h2>
-      <p><b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies like HTML, CSS, and JavaScript.</p>
+      <h3 class="slide-title" >Each feedback counts  -</h3>
+      <img src="assets/img/tutorial/2.png" class="slide-image"/>
+      <h3>Share yours with just a <b>few taps</b></h3>
     </ion-slide>
 
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-3.png" class="slide-image"/>
-      <h2 class="slide-title">What is Ionic Platform?</h2>
-      <p>The <b>Ionic Platform</b> is a cloud platform for managing and scaling Ionic apps with integrated services like push notifications, native builds, user auth, and live updating.</p>
+      <h3 class="slide-title">Let’s keep it fun and graphical!<br>And.. easy... :)</h3>
+      <img src="assets/img/tutorial/4.png" class="slide-image"/>
+      <h3><b>Notifications</b> will remind you to vote</h3>
     </ion-slide>
 
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
-      <h2 class="slide-title">Ready to Play?</h2>
+      <h2 class="slide-title">Ghm...Feeling stuck?</h2>
+      <img src="assets/img/tutorial/5.png" class="slide-image"/>
+      <h2>Maybe it’s a good time to get some <b>feedback from Team?</b></h2>
+    </ion-slide>
+
+    <ion-slide>
+      <h3 class="slide-title">Poof. Magic. Easy & Done.</h3>
+      <img src="assets/img/tutorial/6.png" class="slide-image"/>
       <button ion-button icon-right large clear (click)="startApp()">
         Continue
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
     </ion-slide>
+
+    <!--<ion-slide>-->
+
+      <!--<h2 class="slide-title">Ready to Play?</h2>-->
+      <!--<button ion-button icon-right large clear (click)="startApp()">-->
+        <!--Continue-->
+        <!--<ion-icon name="arrow-forward"></ion-icon>-->
+      <!--</button>-->
+    <!--</ion-slide>-->
+
+    <!--<ion-slide>-->
+      <!--<img src="assets/img/tutorial/7.png" class="slide-image"/>-->
+      <!--<h2 class="slide-title">Ready to Play?</h2>-->
+      <!--<button ion-button icon-right large clear (click)="startApp()">-->
+        <!--Continue-->
+        <!--<ion-icon name="arrow-forward"></ion-icon>-->
+      <!--</button>-->
+    <!--</ion-slide>-->
 
   </ion-slides>
 </ion-content>
