update tutorial and fix back button issue

--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -36,31 +36,13 @@
     </ion-slide>
 
     <ion-slide>
-      <h3 class="slide-title">Poof. Magic. Easy & Done.</h3>
+      <h3 class="slide-title">Poof. Magic. Done.</h3>
       <img src="assets/img/tutorial/6.png" class="slide-image"/>
       <button ion-button icon-right large clear (click)="startApp()">
         Continue
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
     </ion-slide>
-
-    <!--<ion-slide>-->
-
-      <!--<h2 class="slide-title">Ready to Play?</h2>-->
-      <!--<button ion-button icon-right large clear (click)="startApp()">-->
-        <!--Continue-->
-        <!--<ion-icon name="arrow-forward"></ion-icon>-->
-      <!--</button>-->
-    <!--</ion-slide>-->
-
-    <!--<ion-slide>-->
-      <!--<img src="assets/img/tutorial/7.png" class="slide-image"/>-->
-      <!--<h2 class="slide-title">Ready to Play?</h2>-->
-      <!--<button ion-button icon-right large clear (click)="startApp()">-->
-        <!--Continue-->
-        <!--<ion-icon name="arrow-forward"></ion-icon>-->
-      <!--</button>-->
-    <!--</ion-slide>-->
 
   </ion-slides>
 </ion-content>
