--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -4,48 +4,77 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>About</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="presentPopover($event)">
-        <ion-icon name="more"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <div class="about-header">
-    <img src="assets/img/ionic-logo-white.svg" alt="ionic logo">
-  </div>
-  <div padding class="about-info">
-    <h4>Ionic Conference</h4>
 
-    <ion-list no-lines>
-      <ion-item>
-        <ion-icon name="calendar" item-start></ion-icon>
-        <ion-label>Date</ion-label>
-        <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="conferenceDate"></ion-datetime>
-      </ion-item>
 
-      <ion-item>
-        <ion-icon name="pin" item-start></ion-icon>
-        <ion-label>Location</ion-label>
-        <ion-select>
-          <ion-option value="madison" selected>Madison, WI</ion-option>
-          <ion-option value="austin">Austin, TX</ion-option>
-          <ion-option value="chicago">Chicago, IL</ion-option>
-          <ion-option value="seattle">Seattle, WA</ion-option>
-        </ion-select>
-      </ion-item>
-    </ion-list>
+  <ion-slides pager>
 
-    <p>
-      The Ionic Conference is a one-day conference featuring talks from the
-      Ionic team. It is focused on Ionic applications being built with
-      Ionic 2. This includes migrating apps from Ionic 1 to Ionic 2,
-      Angular concepts, Webpack, Sass, and many other technologies used
-      in Ionic 2. Tickets are completely sold out, and we’re expecting
-      more than 1000 developers – making this the largest Ionic
-      conference ever!
-    </p>
-  </div>
+    <ion-slide>
+      <img src="assets/img/logo.jpg" alt="Moody - team barometer">
+      <h3>A fun, notification based mobile app, that allows quick feedback on team atmosphere or various events and encourage improvements.</h3>
+    </ion-slide>
+
+    <ion-slide>
+      <h2 class="slide-title">Enable:</h2>
+      <img src="assets/img/003-tools-and-utensils.png" alt="" class="slide-image">
+      <ion-list>
+        <ion-item>
+          <ion-avatar item-start>
+            <ion-icon name="add-circle" item-start></ion-icon>
+          </ion-avatar>
+          Login/signup
+        </ion-item>
+
+        <ion-item>
+          <ion-avatar item-start>
+            <ion-icon name="add-circle" item-start></ion-icon>
+          </ion-avatar>
+          Create/manage user groups
+        </ion-item>
+
+        <ion-item>
+          <ion-avatar item-start>
+            <ion-icon name="add-circle" item-start></ion-icon>
+          </ion-avatar>
+          Polls: create/edit/start/stop
+        </ion-item>
+
+        <ion-item>
+          <ion-avatar item-start>
+            <ion-icon name="add-circle" item-start></ion-icon>
+          </ion-avatar>
+          Fetch outlook event users
+        </ion-item>
+
+        <ion-item>
+          <ion-avatar item-start>
+            <ion-icon name="add-circle" item-start></ion-icon>
+          </ion-avatar>
+          Big library of icon themes to use
+        </ion-item>
+
+        <ion-item>
+          <ion-avatar item-start>
+            <ion-icon name="add-circle" item-start></ion-icon>
+          </ion-avatar>
+          Different poll types
+        </ion-item>
+
+        <ion-item>
+          <ion-avatar item-start>
+            <ion-icon name="add-circle" item-start></ion-icon>
+          </ion-avatar>
+          Works inside Swedbank
+        </ion-item>
+      </ion-list>
+    </ion-slide>
+
+    <ion-slide>
+      <h2>Slide 3</h2>
+    </ion-slide>
+
+  </ion-slides>
 </ion-content>
