--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -8,11 +8,11 @@
 </ion-header>
 
 <ion-content class="outer-content speaker-list">
-  <ion-list [virtualScroll]="polls">
+  <ion-list>
     <ion-grid fixed>
       <ion-row align-items-stretch>
 
-        <ion-col col-12 col-md-6 align-self-stretch align-self-center *virtualItem="let poll" approxItemHeight="375px">
+        <ion-col col-12 col-md-6 align-self-stretch align-self-center *ngFor="let poll of polls">
 
           <ion-card class="speaker-card">
             <ion-card-header>
