--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -74,12 +74,12 @@
                 </div>
                 <div style="width: 100%; position: relative">
                   <span style="position: absolute; width: 7%" [style.left]="getUserPlace(poll.userVote) + '%'">
-                    <!--<ion-thumbnail item-start class="vote-icon">
+                    <ion-thumbnail item-start class="vote-icon">
                       <img [src]='"assets/img/votes/" + poll.theme + "/" + votes[poll.userVote].name + ".png"' alt="{{votes[poll.userVote].name}}">
                     </ion-thumbnail>
                     <div style="position: absolute">
                       <span>My vote</span>
-                    </div>-->
+                    </div>
                   </span>
                 </div>
               </ion-col>
