fix: comments count

--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -67,19 +67,14 @@
               <ion-col><strong>{{result.value}}</strong></ion-col>
             </ion-row>
 
-            <ion-row>
+            <ion-row [hidden]="!poll.userVoted" >
               <ion-col>
                 <div class="progress-bar green stripes">
                   <span [style.width]="poll.averagePercentage + '%'"></span>
                 </div>
                 <div style="width: 100%; position: relative">
                   <span style="position: absolute; width: 7%" [style.left]="getUserPlace(poll.userVote) + '%'">
-                    <ion-thumbnail item-start class="vote-icon">
-                      <img [src]='"assets/img/votes/" + poll.theme + "/" + votes[poll.userVote].name + ".png"' alt="{{votes[poll.userVote].name}}">
-                    </ion-thumbnail>
-                    <div style="position: absolute">
-                      <span>My vote</span>
-                    </div>
+                    A
                   </span>
                 </div>
               </ion-col>
@@ -95,7 +90,7 @@
               <ion-col *ngIf="poll.users">
                 <button ion-button icon-left clear small>
                   <ion-icon name="text"></ion-icon>
-                  <div>{{getCommentsCount(poll)}} Messages</div>
+                  <div>{{poll.commentsCount}} Messages</div>
                 </button>
               </ion-col>
             </ion-row>
