feat: messages box

--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -88,7 +88,8 @@
                 </button>
               </ion-col>
               <ion-col *ngIf="poll.users">
-                <button ion-button icon-left clear small>
+                <button ion-button icon-left clear small
+                  (click)="presentModal(poll)">
                   <ion-icon name="text"></ion-icon>
                   <div>{{poll.commentsCount}} Messages</div>
                 </button>
