fix: messages box title

--- a/src/pages/support/support.html
+++ b/src/pages/support/support.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <ion-title>Orders</ion-title>
+      <ion-title>Messages</ion-title>
     </ion-title>
     <ion-buttons left>
       <button ion-button (click)="dismiss()">
