--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -27,21 +27,33 @@
   <ion-list radio-group no-lines [(ngModel)]="theme">
     <h2 padding-left>Theme</h2>
     <ion-item>
+      <ion-thumbnail item-start>
+        <img src="../../assets/img/votes/default/wow.png">
+      </ion-thumbnail>
       <ion-label>Default</ion-label>
       <ion-radio checked="true" value="default"></ion-radio>
     </ion-item>
 
     <ion-item>
+      <ion-thumbnail item-start>
+        <img src="../../assets/img/votes/energy/wow.png">
+      </ion-thumbnail>
       <ion-label>Energy</ion-label>
       <ion-radio value="energy"></ion-radio>
     </ion-item>
 
     <ion-item>
+      <ion-thumbnail item-start>
+        <img src="../../assets/img/votes/weather/wow.png">
+      </ion-thumbnail>
       <ion-label>Weather</ion-label>
       <ion-radio value="weather"></ion-radio>
     </ion-item>
 
     <ion-item>
+      <ion-thumbnail item-start>
+        <img src="../../assets/img/votes/agile/wow.png">
+      </ion-thumbnail>
       <ion-label>Agile</ion-label>
       <ion-radio value="agile"></ion-radio>
     </ion-item>
