--- a/src/pages/polls/polls.html
+++ b/src/pages/polls/polls.html
@@ -15,7 +15,7 @@
         <ion-col col-12 col-md-6 align-self-stretch align-self-center *ngFor="let poll of polls">
 
           <ion-card class="speaker-card">
-            <ion-card-header>
+            <ion-card-header class="poll-header">
               <h2>{{poll.title}}</h2>
             </ion-card-header>
 
