--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -28,7 +28,7 @@
     <h2 padding-left>Theme</h2>
     <ion-item>
       <ion-thumbnail item-start>
-        <img src="../../assets/img/votes/default/wow.png">
+        <img src="assets/img/votes/default/wow.png">
       </ion-thumbnail>
       <ion-label>Default</ion-label>
       <ion-radio checked="true" value="default"></ion-radio>
@@ -36,7 +36,7 @@
 
     <ion-item>
       <ion-thumbnail item-start>
-        <img src="../../assets/img/votes/energy/wow.png">
+        <img src="assets/img/votes/energy/wow.png">
       </ion-thumbnail>
       <ion-label>Energy</ion-label>
       <ion-radio value="energy"></ion-radio>
@@ -44,7 +44,7 @@
 
     <ion-item>
       <ion-thumbnail item-start>
-        <img src="../../assets/img/votes/weather/wow.png">
+        <img src="assets/img/votes/weather/wow.png">
       </ion-thumbnail>
       <ion-label>Weather</ion-label>
       <ion-radio value="weather"></ion-radio>
@@ -52,7 +52,7 @@
 
     <ion-item>
       <ion-thumbnail item-start>
-        <img src="../../assets/img/votes/agile/wow.png">
+        <img src="assets/img/votes/agile/wow.png">
       </ion-thumbnail>
       <ion-label>Agile</ion-label>
       <ion-radio value="agile"></ion-radio>
